Fix cut off gradient blobs on search

--- a/src/components/profile/game_select/GameSelect.module.css
+++ b/src/components/profile/game_select/GameSelect.module.css
@@ -10,6 +10,7 @@
 
 .pageInner {
   position: relative;
+  min-height: 100%;
 }
 
 .language {
